<resources>
    <string name="app_name">eabl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_title">Store data of used bottles</string>
    <string name="slide_description">This application helps eabl to store data of their used bottles</string>
    <string name="button_text">Get Started</string>
    <string name="slide_description2">This application helps eabl to store data of their used bottles</string>
    <string name="slide_title2">Gain Points on empty bottles</string>slide
    <string name="slide_title3">Access account &amp; redeem points</string>
    <string name="slide_description3">This application helps eabl to store data of their used bottles</string>
    <string name="look_up_heading">Welcome to EABL Recycling &amp; Inspection mobile app System!</string>
    <string name="look_up_guidance">Click "I am a member" to activate your account or "I am a new member" to register.</string>
    <string name="look_up_button">I am a member</string>
    <string name="look_up_button2">I am a new Member</string>
    <string name="full_name">Full names</string>
    <string name="hint_email">Your Email</string>
    <string name="or_continue">Or continue with a social account</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account">Don\'t have an account? <a href="">Sign up</a></string>
    <string name="you_can_login">You can now login &amp; access your account"</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="password_success">Password Created Successfully!!</string>
    <string name="hint_id">Your ID</string>
    <string name="id_text">ID Number</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="your_password">Your password</string>
    <string name="hint_name">Your names</string>
    <string name="continue_Login">Please continue to login &amp; Access your account</string>
    <string name="continue_login2">Continue</string>
    <string name="continue_login3">Account Found Successful!</string>
    <string name="submit_text">Submit</string>
    <string name="device_verification">Device Verification</string>
    <string name="we_sent_otp">We sent otp verification to your email</string>
    <string name="code_expiry">This code will expire in 01:35</string>
    <string name="verification_continue">Continue</string>
    <string name="login_to_account">Login to your account</string>
    <string name="email_login_to_account">Email</string>
    <string name="hint_login_to_account_password">Your Password</string>
    <string name="password_text">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login_text">Login</string>
    <string name="best_wines">Best wines now discount up to 30%</string>
    <string name="get_wine">get the wine of your choice with discount buy now or cry later</string>
    <string name="shop">Shop Now</string>
    <string name="vinest_black">Vinest Black Prime 750ml</string>
    <string name="vinest_gold">Vinest Gold Blanc 750ml</string>
    <string name="did_not_get_code_resend_in_20_second">Didn`t get code? Resend in %1$s seconds</string>
    <string name="resend_code">Resend Code</string>
    <string-array name="years">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
    </string-array>
</resources>
