<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ExistingMember.ExistingMemberFragment"
    android:background="@color/lightGray">
    <include layout="@layout/fragment_tool_bar"/>



    <TextView
        android:id="@+id/newMember"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:text="@string/look_up_button"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black1"
        android:textAlignment="center"
        android:layout_marginTop="86dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="80dp"
        android:layout_height="19dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/full_name"
        android:textColor="@color/black2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginEnd="240dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/newMember"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        android:hint="@string/hint_name"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/edittext"/>

    <TextView
        android:id="@+id/idNumber"
        android:layout_width="80dp"
        android:layout_height="19dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/id_text"
        android:textColor="@color/black2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="240dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:id="@+id/idTxt"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:hint="@string/hint_id"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idNumber"
        app:layout_constraintVertical_bias="0.024" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="302dp"
        android:layout_height="64dp"
        android:background="@drawable/button"
        android:text="@string/submit_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idTxt"
        app:layout_constraintVertical_bias="0.62" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
