<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.existingMember.LoginToAccountFragment"
    android:background="@color/lightGray">

    <TextView
        android:id="@+id/login_to_account"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:text="@string/login_to_account"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black1"
        android:textAlignment="center"
        android:layout_marginTop="86dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/login_to_account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/email_login_to_account"
        android:textColor="@color/black2"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_to_account" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_to_account_email"
        android:hint="@string/hint_email"
        android:paddingStart="20dp"
        android:paddingEnd="180dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edittext"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password_text"
        android:textColor="@color/black2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/email_login"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edittext"
        android:inputType="textPassword"
        android:hint="@string/hint_login_to_account_password"
        android:singleLine="true"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@drawable/button"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintVertical_bias="0.62" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>