<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.NewUser.LookUpFragment"
    android:background="@color/lightGray">


    <TextView
        android:id="@+id/lookUpHeading"
        android:layout_width="302dp"
        android:layout_height="90dp"
        android:textStyle="bold"
        android:text="@string/look_up_heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black1"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginTop="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/animation"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lookUpHeading" />

    <TextView
        android:id="@+id/lookUpGuidance"
        android:layout_width="326dp"
        android:layout_height="91dp"
        android:layout_marginTop="12dp"
        android:text="@string/look_up_guidance"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLookUp"
        android:layout_width="299dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/look_up_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lookUpGuidance" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLookUp2"
        android:layout_width="299dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/look_up_button2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLookUp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>