<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.existingMember.MemberCreateNewPasswordFragment"
    android:background="@color/lightGray">



    <TextView
        android:id="@+id/createNewPassword"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:text="@string/create_new_password"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black1"
        android:textAlignment="center"
        android:layout_marginTop="86dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/new_password"
        android:textColor="@color/black2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/createNewPassword"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/newPasswordTxt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        android:hint="@string/your_password"
        android:singleLine="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edittext"/>

    <TextView
        android:id="@+id/repeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/repeat_password"
        android:textColor="@color/black2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/newPasswordTxt"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:id="@+id/repeatPasswordTxt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:hint="@string/your_password"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPassword"
        app:layout_constraintVertical_bias="0.024" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createPasswordContinueButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@drawable/button"
        android:text="@string/continue_login2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordTxt"
        app:layout_constraintVertical_bias="0.62" />
    <ProgressBar
        android:id="@+id/progressBar1"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>