<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.onboarding.ThirdScreen"
    android:background="@drawable/mask5">

    <TextView
        android:layout_width="302dp"
        android:layout_height="106dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="36dp"
        android:text="@string/slide_title3"
        android:textColor="@color/myWhite"
        android:textSize="40sp"
        android:textStyle="bold"
        android:id="@+id/redeem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slideDescription3"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:text="@string/slide_description3"
        android:textColor="@color/myWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redeem"
        android:layout_marginTop="15dp">


    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/image3"
        android:layout_width="302dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="36dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:text="@string/button_text"
        android:textColor="@color/myWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideDescription3"
        app:layout_constraintVertical_bias="0.177"
        >

    </androidx.appcompat.widget.AppCompatButton>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>