<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.onboarding.SecondScreen"
    android:background="@drawable/mask4">


    <TextView
    android:layout_width="302dp"
    android:layout_height="106dp"
    android:layout_marginTop="484dp"
    android:layout_marginEnd="37dp"
    android:layout_marginStart="36dp"
    android:text="@string/slide_title2"
    android:textColor="@color/myWhite"
    android:textSize="40sp"
    android:textStyle="bold"
    android:id="@+id/points"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slideDescription2"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:text="@string/slide_description2"
        android:textColor="@color/myWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/points"
        android:layout_marginTop="15dp">


    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/image2"
        android:layout_width="302dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="36dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:text="@string/button_text"
        android:textColor="@color/myWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideDescription2"
        app:layout_constraintVertical_bias="0.177"
        >

    </androidx.appcompat.widget.AppCompatButton>

    <ImageView
        android:id="@+id/tint1"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:src="@drawable/tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>